<resources>
    <string name="app_name">ExpertWISC</string>
    <string name="prompt_user">Usuario</string>
    <string name="prompt_password">Contraseña</string>
    <string name="action_sign_in">Ingresar</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_user">Usuario incorrecto</string>
    <string name="error_invalid_password">Contraseña muy corta</string>
    <string name="error_incorrect_user">Usuario incorrecto</string>
    <string name="error_incorrect_password">Contraseña incorrecta</string>
    <string name="error_field_required">Este campo es importante</string>
    <string name="error_password_equals">La contraseña debe de ser la misma</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_main">ExpertWisc</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="nuevo_paciente">Registro de paciente</string>
    <string name="sub_prueba_uno">1. Construcción con Cubos</string>
    <string name="sub_prueba_cc">1. CC</string>
    <string name="sub_prueba_dos">2. Semejanzas</string>
    <string name="sub_prueba_s">2. S</string>
    <string name="sub_prueba_tres">3. Retención de Dígitos</string>
    <string name="sub_prueba_rd">3. RD</string>
    <string name="sub_prueba_cuatro">4. Conceptos</string>
    <string name="sub_prueba_co">4. Co</string>
    <string name="sub_prueba_cinco">5. Claves</string>
    <string name="sub_prueba_cl">5. Cl</string>
    <string name="sub_prueba_seis">6. Vocabulario</string>
    <string name="sub_prueba_v">6. V</string>
    <string name="sub_prueba_siete">7. Letras y Números</string>
    <string name="sub_prueba_ln">7. LN</string>
    <string name="sub_prueba_ocho">8. Matrices</string>
    <string name="sub_prueba_m">8. M</string>
    <string name="sub_prueba_nueve">9. Comprensión</string>
    <string name="sub_prueba_c">9. C</string>
    <string name="sub_prueba_diez">10. Búsqueda de Símbolos</string>
    <string name="sub_prueba_bs">10. BS</string>
    <string name="sub_prueba_once">11. (Completamiento de Figuras)</string>
    <string name="sub_prueba_cf">11. (CF)</string>
    <string name="sub_prueba_doce">12. (Animales)</string>
    <string name="sub_prueba_a">12. (A)</string>
    <string name="sub_prueba_trece">13. (Información)</string>
    <string name="sub_prueba_i">13. (I)</string>
    <string name="sub_prueba_catorce">14. (Aritmética)</string>
    <string name="sub_prueba_ar">14. (Ar)</string>
    <string name="sub_prueba_quince">15. (Adivinanzas)</string>
    <string name="sub_prueba_ad">15. (Ad)</string>
    <string name="title_activity_subtest">Subtest</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="hello_blank_fragment">Este apartado no está disponible en esta versión</string>
    <string name="uploadImages">"Cargar Imagen"</string>
    <string name="cerrar">"X"</string>
    <string name="Comienzo_cc">6 a 7 años: Ítem 1 \n8 a 16 años: Ítem 2</string>
    <string name="Interrupcion_cc">Luego de 3 puntuaciones consecutivas de 0</string>
    <string name="Puntuacion_cc">Ítems 1-3: 0, 1 ó 2 puntos \nÍtems 4-8: 0, ó 4 puntos \nÍtems 9-14: 0 ó la puntuación correspondiente por bonificación por tiempo. \n<b>CCS</b> \nÍtems 1-3: 0, 1 ó 2 puntos \nÍtems 4-14: 0 ó 4 puntos</string>
    <string name="Retrogresion_cc">8 a 16 años: Con 0 ó 1 punto en alguno de los dos primeros ítems, administrar los ítems anteriores en secuencia inversa hasta obtener dos puntuaciones perfectas consecutivas.</string>
    <string name="Comienzo_s">"<b>6 a 8 años:</b> Ítem de Muestra, luego Ítem 1. \n9 a 11 años, Ítem de Muestra, luego Ítem 3. \n12 a 16 años, Ítem de Muestra, luego Ítem 5."</string>
    <string name="Retrogresion_s"><b>9 a 16 años:</b> Con 0 o 1 punto en alguno de los dos primeros ítems, administrar los ítems anteriores en secuencia inversa hasta obtener dos puntuaciones perfectas consecutivas.</string>
    <string name="Interrupcion_s">Luego de 5 puntuaciones consecutivas de 0</string>
    <string name="Puntuacion_s"><b>Ítems 1 - 2:</b> 0 ó 1 punto. \n<b>Ítems 3 - 23:</b> 0, 1 ó 2 puntos \n<i>Véase Manual de Administración y Puntuación para ejemplos de respuestas.</i></string>
    <string name="Comienzo_rd"><b>6 a 16 años: \nOrden directo (DD):</b> \Ítem 1 \n<b>Orden Inverso (DI):</b> \n Ítem de Muestra, luego Ítem 1.</string>
    <string name="Interrupcion_rd"><b>DD:</b> Luego de obtener 0 punto en <i>ambos intentos</i> de un ítem. \n<b>DI:</b> Luego de obtener 0 punto en <i>ambos intentos</i> de un ítem.</string>
    <string name="Puntuacion_rd">En cada intento: <b>0</b> ó <b>1</b> punto en cada respuesta. \nPuntuación del Ítem: Intento 1 + Intento 2\n \n<b>DD + DI:</b> Serie de números más larga recordada en el último intento que haya obtenido punto en <b>DD</b>(DD+) o <b>DI</b>(DI+)</string>
    <string name="Comienzo_co"><b>6 a 8 años:</b> Ítems de Muestra A y B, luego Ítem 1. \n<b>9 a 11 años:</b> Ítems de Muestra A y B, luego Ítem 5. \n<b>12 a 16 años:</b> Ítems de Muestra A y B, luego Ítem 7.</string>
    <string name="Retrogresion_co"><b>9 a 16 años:</b> Con 0 ó 1 punto en alguno de los dos primeros ítems, administrar los ítems anteriores en secuencia inversa hasta obtener dos puntuaciones perfectas consecutivas.</string>
    <string name="Interrupcion_co">Luego de <b>5</b> puntuaciones consecutivas de 0.</string>
    <string name="Puntuacion_co"><b>0</b> ó <b>1</b> punto. \nLas respuestas correctas están en color.</string>
    <string name="Comienzo_cl"><b>6 a 7 años:</b> Claves A Ítems de Muestra, luego los ítems de subtest. \n<b>8 a 16 años:</b> Claves B Ítems de Muestra, luego los ítems de subtest. \nPara Claves A y B, ver Cuadernillo de Respuestas 1.</string>
    <string name="Interrupcion_cl">Luego de 120"</string>
    <string name="Puntuacion_cl">Use la plantilla de Corrección para revisar las respuestas del entrevistado. \nOtorque <b>1</b> punto por cada respuesta correcta.</string>
    <string name="Comienzo_v"><b>6 a 8 años:</b> Ítem 5. \n<b>9 a 11 años:</b> Ítem 7. \n<b>12 a 16 años:</b> Ítem 9.</string>
    <string name="Retrogresion_v"><b>6 a 16 años:</b> Con <b>0</b> ó <b>1</b> punto en alguno de los primeros ítems, administrar los ítems anteriores en secuencia inversa hasta obtener dos puntuaciones perfectas consecutivas.</string>
    <string name="Interrupcion_v">Luego de <b>5</b> puntuaciones consecutivas de 0.</string>
    <string name="Puntuacion_v"><b>Ítems 1-4: 0</b> ó <b>1</b> punto. \n<b>Ítems 5-36: 0,1 </b> ó <b>2</b> puntos. \n<i>Véase Manual de Administración y Puntuación para ejemplos de respuestas.</i></string>
    <string name="Comienzo_ln"><b>6 a 7 años:</b> Ítems de Eliminación, Ítem de Muestra, luego ítem 1. \n<b>8 a 16 años:</b> Ítem de Muestra, luego ítem 1.</string>
    <string name="Interrupcion_ln">Si el entrevistado no es capaz de responder corectamente cualquiera de los ítems de Eliminación o luego de obtener <b>0</b> punto en los <i>tres intentos</i> de un ítem.</string>
    <string name="Puntuacion_ln"><b>0</b> ó <b>1</b> punto para cada intento.</string>
    <string name="Comienzo_m"><b>6 a 8 años:</b> Ítems de Muestra A-C, luego Ítem 4. \n<b>9 a 11 años:</b> Ítems de Muestra A-C, luego Ítem 7. \n<b>12 a 16 años:</b> Ítems de Muestra A-C, luego Ítem 11.</string>
    <string name="Retrogresion_m"><b>6 a 16 años:</b> Con <b>0</b> punto en alguno de los primeros ítems, administrar los ítems anteriores en secuencia inversa hasta obtener dos puntuaciones perfectas consecutivas.</string>
    <string name="Interrupcion_m">Luego de <b>4</b> puntos consecutivos de 0, ó <b>4</b> puntos de 0 en <i>cinco</i> ítems consecutivos.</string>
    <string name="Puntuacion_m"><b>0</b> ó <b>1</b> punto. \nRespuestas correctas en color.</string>
    <string name="Comienzo_c"><b>6 a 8 años: </b>Ítem 1. \n<b>9 a 11 años: </b>Ítem 3. \n<b>12 a 16 años: </b>Ítem 5.</string>
    <string name="Retrogresion_c"><b>9 a 16 años:</b> Con <b>0</b> ó <b>1</b> punto en alguno de los primeros ítems, administrar los ítems anteriores en secuencia inversa hasta obtener dos puntuaciones perfectas consecutivas.</string>
    <string name="Interrupcion_c">Luego de <b>4</b> puntuaciones consecutivas de 0.</string>
    <string name="Puntuacion_c"><b>0, 1</b> ó <b>2</b> puntos. \n<i>Véase el Manual de Administración y Puntuación para los ejemplos de respuestas.</i></string>
    <string name="Comienzo_bs"><b>6 a 7 años</b> (Búsqueda de Símbolos A): Ítems de Muestra, Ítems de Práctica, luego los ítems de lTest. \n<b>8 a 16 años</b> (Búsqueda de Símbolos B): Ítems de Muestra, Ítems de Práctica, luego los Ítems del Test.</string>
    <string name="Interrupcion_bs">Luego de 120"</string>
    <string name="Puntuacion_bs">Utilice la Plantilla de Corrección para puntuar las respuestas del entrevistado. Reste el número de errores al de aciertos. \nSi el resultado es menor a 0, anote 0.</string>
    <string name="Comienzo_cf"><b>6 a 8 años:</b> Ítem de Muestra, luego Ítem 1. \n<b>9 a 11 años:</b> Ítem de Muestra, luego Ítem 5. \n<b>12 a 16 años:</b> Ítem de Muestra, luego Ítem 10.</string>
    <string name="Retrogresion_cf"><b>9 a 16 años:</b> Con <b>0</b> punto en alguno de los primeros ítems, administrar los ítems anteriores en secuencia inversa hasta obtener dos puntuaciones perfectas consecutivas.</string>
    <string name="Interrupcion_cf">Luego de <b>6</b> puntuaciones consecutivas de 0.</string>
    <string name="Puntuacion_cf"><b>0</b> ó <b>1</b> punto. \nVéase el <i>Manual de Administración y Puntuación</i> para los ejemplos de respuestas.</string>
    <string name="Comienzo_a"><b>6 a 16 años:</b> Ítem de Muestra, Ítem de Práctica, luego ítem 1.</string>
    <string name="Interrupcion_a">Después de 45" de cada Parte.</string>
    <string name="Puntuacion_a">Utilice la Plantilla de Correción para puntuar las respuestas del entrevistado. Reste el número de errores al de aciertos. \nSi el resultado es menor o igual a 0, anote 0. \nAa y Ao: Puntuación Directa Total para Partes 1 y 2, respectivamente.  </string>
    <string name="Comienzo_i"><b>6 a 8 años:</b> Ítem 5. \n<b>9 a 11 años:</b> Ítem 10. \n<b>12 a 16 años:</b> Ítem 12.</string>
    <string name="Retrogresion_i"><b>9 a 16 años:</b> Con <b>0</b> punto en <i>alguno</i> de los dos primeros ítems, administrar los ítems anteriores en secuencia inversa hasta obtener dos puntuaciones perfectas consecutivas.</string>
    <string name="Interrupcion_i">Luego de <b>5</b> puntuaciones consecutivas de 0.</string>
    <string name="Puntuacion_i"><b>0</b> ó <b>1</b> punto. \nVéase el <i>Manual de Administración y Puntuación</i> para los ejemplos de respuestas.</string>
    <string name="Comienzo_ad"><b>6 a 9 años:</b> Ítems de Muestra A y B, luego Ítem 1. \n<b>10 a 16 años:</b> Ítems de Muestra A y B, luego Ítem 5.</string>
    <string name="Retrogresion_ad"><b>10 a 16 años:</b> Con <b>0</b> punto en <i>alguno</i> de los dos primeros ítems, administrar los ítems anteriores en secuencia inversa hasta obtener dos puntuaciones perfectas consecutivas.</string>
    <string name="Interrupcion_ad">Luego de <b>5</b> puntuaciones consecutivas de 0.</string>
    <string name="Puntuacion_ad"><b>0</b> ó <b>1</b> punto. \nVéase el <i>Manual de Administración y Puntuación</i> para los ejemplos de respuestas.</string>
</resources>